fixed overflow-x on 320p

--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -97,5 +97,7 @@ div.MuiPaper-outlined{
    position: relative;
    justify-content: center;
    padding:0px;
+   row-gap: 0px;
+   overflow-x: hidden;
  }
 }
